<resources>
    <string name="app_name">MCLab3</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send_to_next_screen">Send to Next Screen</string>
    <string name="you_entered">You Entered...</string>
    <string name="close">close</string>
</resources>
